Update Babylon README to document full demo (RuntimeCheck + HAT MatMul)